[package]
name = "backend"
version = "0.0.1"
edition = "2024"

[dependencies]
aes = "0.9.0"
axum = { version = "0.8.8" }
base64 = "0.22.1"
cbc = "0.2.0"
chrono = "0.4.44"
quick-xml = "0.39.2"
reqwest = { version = "0.13.2", features = ["blocking", "cookies", "query", "form", "native-tls"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.128" }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
